<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:key="pref_info_9esim"
        app:title="@string/pref_info_9esim_links"
        app:iconSpaceReserved="false">
        <Preference
            app:iconSpaceReserved="false"
            app:key="pref_info_9esim_official_website"
            app:title="@string/pref_info_9esim_official_website"
            app:summary="@string/pref_info_9esim_official_website_url">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/pref_info_9esim_official_website_url" />
        </Preference>
        <Preference
            app:iconSpaceReserved="false"
            app:key="pref_info_9esim_tg"
            app:title="@string/pref_info_9esim_tg"
            app:summary="@string/pref_info_9esim_tg_url">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/pref_info_9esim_tg_url" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>